<resources>
    <string name="app_name">Sample Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="table_layout">Table Layout</string>
    <string name="horizontal_linear_layout">Horizontal Linear Layout</string>
    <string name="vertical_linear_layout">Vertical Linear Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="layouts">Layouts</string>
    <string name="basic_string_resources">Basic String Resources</string>
    <string name="plural_string_resources">Plural String Resources</string>
    <string name="string_resources">String Resources</string>
    <string name="string_arrays">String Arrays</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lives_remaining">You have %1$d of %2$s remaining </string>
    <string name="this_is_a_very_simple_string">This is a very simple string</string>
    
    <plurals name="lives">
        <item quantity="one">%d life</item>
        <item quantity="other">%d lives</item>
    </plurals>
</resources>
